--- a/CRAMv4.tex
+++ b/CRAMv4.tex
@@ -1142,7 +1142,7 @@ Note however some of these flags can be derived during decode, so may be omitted
 0x10 &  & SEQ being reverse complemented\tabularnewline
 \hline
 0x20 & calculated\tnote{b}\ \ or stored in the mate's info & SEQ of the next segment in the
-template being reversed\tabularnewline
+template being reverse complemented\tabularnewline
 \hline
 0x40 &  & the first segment in the template\tnote{c}\tabularnewline
 \hline
@@ -1345,7 +1345,7 @@ The following bit flags are defined:
 0x1 & mate negative strand bit & the bit is set if the mate is on the negative
 strand\tabularnewline
 \hline
-0x2 & mate mapped bit & the bit is set if the mate is mapped\tabularnewline
+0x2 & mate unmapped bit & the bit is set if the mate is unmapped\tabularnewline
 \hline
 \end{tabular}
 
