--- a/VCFv4.4.tex
+++ b/VCFv4.4.tex
@@ -454,8 +454,8 @@ See also Section~\ref{sv-format-keys} for a list of genotype keys reserved for s
     If a call cannot be made for a sample at a given locus, `$.$' must be specified for each missing allele in the {\tt GT} field (for example `$./.$' for a diploid genotype and `$.$' for haploid genotype).
     The meanings of the separators are as follows (see the {\tt PS} and {\tt PSL} fields below for more details on incorporating phasing information into the genotypes):
     	\begin{itemize}
-    	  \item $/$ : previous allele unphased
-    	  \item $\mid$ : previous allele phased (according to the phase-set indicated in {\tt PS} or {\tt PSL})
+    	  \item $/$ : following allele is unphased
+    	  \item $\mid$ : following allele phased (according to the phase-set indicated in {\tt PS} or {\tt PSL})
     	\end{itemize}
 
   \item GL (Float): Genotype likelihoods comprised of comma separated floating point $log_{10}$-scaled likelihoods for all possible genotypes given the set of alleles defined in the REF and ALT fields.
@@ -526,25 +526,26 @@ See also Section~\ref{sv-format-keys} for a list of genotype keys reserved for s
   All phased genotypes that do not contain a PS subfield are assumed to belong to the same phased set.
   If the genotype in the GT field is unphased, the corresponding PS field is ignored.
   The recommended convention is to use the position of the first variant in the set as the PS identifier (although this is not required).
-  \item PQL (List of integers): The list of PQs, one for each phase set in PSL (encoded like PQ). The missing value 0 should be used when the corresponding PSL value is missing, or when the phasing is of unknown quality.
+  \item PQL (List of integers): The list of PQs, one for each phase set in PSL (encoded like PQ). 
+  The missing value 0 should be used when the corresponding PSL value is missing, or when the phasing is of unknown quality.
   \item PSL (List of Strings): The list of phase sets, one for each allele specified in the {\tt GT}. 
-  Unphased alleles (without a $\mid$ separator after them) must have the value '$.$' in their corresponding position in the list. 
+  Unphased alleles (without a $\mid$ separator before them) must have the value '$.$' in their corresponding position in the list. 
   The phase-set name must be unique across the genome (unlike {\tt PS}  as this tag can be used to phase across references.
   Thus, the recommended value for phase-set names is CHR*POS*ALLELE-NUMBER of the "first" allele which is included in this set, with ALLELE-NUMBER being the index of the allele in the {\tt GT} field, since multiple distinct phase-sets could start at the same position. \footnote{The '*' character is used as a separator since ':' is already a separator in VCF.}
   A given sample-genotype must not have values for both PS and PSL.
   In addition, PS and PSL are not interoperable, in that a PS mentioned in one variant cannot be referenced in a PSL in another, 
-  since when used in PS is isn't connected to any specific haplotype (i.e. first or second), but PSL is. 
+  since when used in PS it isn't connected to any specific haplotype (i.e. first or second), but PSL is. 
  
   Example: 
   
   \vspace{0.5em}
   \begin{tabular}{ l l l l l l l l l l}
 	\#CHROM & POS & ID & REF & ALT & QUAL & FILTER & INFO & FORMAT & SAMPLE1\\
-	chr19 & $5$ & . & T & G & . & PASS & DP=100 &GT:PSL & \tt{0|1:.,chr9*5*1}\\
-	chr20 & $10$ & . & A & T,G & . & PASS & DP=100 &GT:PSL & \tt{1|2/3|:chr20*10*1,.,chr9*5*1} \\
-	chr20 & $15$ & . & G & C & . & PASS & DP=100 &GT:PSL & \tt{1/2|:.,chr20*10*1}\\
+	chr19 & $5$ & . & T & G & . & PASS & DP=100 &GT:PSL & \tt{|0/1:chr9*5*1,.}\\
+	chr20 & $10$ & . & A & T,G & . & PASS & DP=100 &GT:PSL & \tt{|1/2|3:chr20*10*1,.,chr9*5*1} \\
+	chr20 & $15$ & . & G & C & . & PASS & DP=100 &GT:PSL & \tt{1|2:.,chr20*10*1}\\
 \end{tabular}
-  \end{itemize}
+\end{itemize}
 
 \section{Understanding the VCF format and the haplotype representation}
 VCF records use a single general system for representing genetic variation data composed of:
@@ -2073,6 +2074,7 @@ BCF2 files are expected to be indexed through the same index scheme, section~4 a
 \subsection{Changes between VCFv4.4 and VCFv4.3}
 \begin{itemize}
 \item Started new Draft Spec
+\item Added Phase-Set List (PSL \& PSQ) and allele-specific phasing notation (in GT)
 \end{itemize}
 
 \subsection{Changes to VCFv4.3}
