oops missing 'is'

--- a/VCFv4.4.tex
+++ b/VCFv4.4.tex
@@ -455,7 +455,7 @@ See also Section~\ref{sv-format-keys} for a list of genotype keys reserved for s
     The meanings of the separators are as follows (see the {\tt PS} and {\tt PSL} fields below for more details on incorporating phasing information into the genotypes):
     	\begin{itemize}
     	  \item $/$ : following allele is unphased
-    	  \item $\mid$ : following allele phased (according to the phase-set indicated in {\tt PS} or {\tt PSL})
+    	  \item $\mid$ : following allele is phased (according to the phase-set indicated in {\tt PS} or {\tt PSL})
     	\end{itemize}
 
   \item GL (Float): Genotype likelihoods comprised of comma separated floating point $log_{10}$-scaled likelihoods for all possible genotypes given the set of alleles defined in the REF and ALT fields.
