Add subtitle noting this has been superseded by a later version

--- a/VCFv4.2.tex
+++ b/VCFv4.2.tex
@@ -7,7 +7,9 @@
 
 \begin{document}
 \input{VCFv4.2.ver}
-\title{The Variant Call Format (VCF) Version 4.2 Specification}
+\title{The Variant Call Format (VCF) Version 4.2 Specification
+\normalsize\\[2ex]
+(Superseded by the \href{http://samtools.github.io/hts-specs/VCFv4.3.pdf}{VCF v4.3} specification introduced in October 2015)}
 \date{\headdate}
 \maketitle
 \begin{quote}\small
