--- a/VCFv4.1.tex
+++ b/VCFv4.1.tex
@@ -7,7 +7,9 @@
 
 \begin{document}
 \input{VCFv4.1.ver}
-\title{The Variant Call Format (VCF) Version 4.1 Specification}
+\title{The Variant Call Format (VCF) Version 4.1 Specification
+\normalsize\\[2ex]
+(Superseded by the \href{http://samtools.github.io/hts-specs/VCFv4.2.pdf}{VCF v4.2} and \href{http://samtools.github.io/hts-specs/VCFv4.3.pdf}{v4.3} specifications)}
 \date{\headdate}
 \maketitle
 \begin{quote}\small
