--- a/VCFv4.4.tex
+++ b/VCFv4.4.tex
@@ -556,8 +556,8 @@ Several tag names follow conventions indicating how their values are represented
 \begin{samepage}
 The following INFO keys are reserved for encoding structural variants.
 In general, when these keys are used by imprecise variants, the values should be best estimates.
-When present, per allele keys must be specified for all alt alleles (including non-structural alleles).
-The missing value should be used as a placeholder for the alt alleles for which the key does not have a meaningful value.
+When present, per allele keys must be specified for all ALT alleles (including non-structural alleles).
+The missing value should be used as a placeholder for the ALT alleles for which the key does not have a meaningful value.
 The empty string is used to encode missing values in lists of strings.
 
 \footnotesize
@@ -612,9 +612,9 @@ The missing value should be used for inter-chromosomal $BND$ records, and may be
 \end{verbatim}
 \normalsize
 
-If present, the number of entries must be twice the number of alt alleles.
-$CIPOS$ consists of successive pairs of records indicating the start and end offsets relative to $POS$ of the confidence interval for each alt allele.
-For example, $CIPOS=-5,5,0,0$ indicates a 5bp confidence interval in each direction for the first alt allele, and an exact position for the second alt allele.
+If present, the number of entries must be twice the number of ALT alleles.
+$CIPOS$ consists of successive pairs of records indicating the start and end offsets relative to $POS$ of the confidence interval for each ALT allele.
+For example, $CIPOS=-5,5,0,0$ indicates a 5bp confidence interval in each direction for the first ALT allele, and an exact position for the second alt allele.
 
 When breakpoint sequence homology exists, $CIPOS$ should be used in conjunction with $HOMSEQ$ to specify the interval of homology.
 
@@ -628,9 +628,9 @@ Each $CIPOS$ interval must span 0. That is, the lower bound cannot be greater th
 \end{verbatim}
 \normalsize
 
-If present, the number of entries must be twice the number of alt alleles.
-$CIEND$ consists of successive pairs of records indicating the start and end offsets relative to $END$ of the confidence interval for each alt allele.
-For example, $CIEND=-5,5,.,.$ indicates a 5bp confidence interval in each direction around the end position for the first alt allele, and no $CIEND$ is defined for the second alt allele.
+If present, the number of entries must be twice the number of ALT alleles.
+$CIEND$ consists of successive pairs of records indicating the start and end offsets relative to $END$ of the confidence interval for each ALT allele.
+For example, $CIEND=-5,5,.,.$ indicates a 5bp confidence interval in each direction around the end position for the first ALT allele, and no $CIEND$ is defined for the second alt allele.
 
 \footnotesize
 \begin{verbatim}
@@ -656,8 +656,8 @@ However, the alternate allele assembly file may contain additional information a
 \end{verbatim}
 \normalsize
 
-If present, the number of entries must be four (4) times the number of alt alleles.
-$MEINFO$ consists of successive quadruplets of records for each alt allele.
+If present, the number of entries must be four (4) times the number of ALT alleles.
+$MEINFO$ consists of successive quadruplets of records for each ALT allele.
 
 \footnotesize
 \begin{verbatim}
@@ -665,8 +665,8 @@ $MEINFO$ consists of successive quadruplets of records for each alt allele.
 \end{verbatim}
 \normalsize
 
-If present, the number of entries must be four (4) times the number of alt alleles.
-$MEINFO$ consists of successive quadruplets of records for each alt allele.
+If present, the number of entries must be four (4) times the number of ALT alleles.
+$MEINFO$ consists of successive quadruplets of records for each ALT allele.
 
 \footnotesize
 \begin{verbatim}
@@ -680,7 +680,7 @@ $MEINFO$ consists of successive quadruplets of records for each alt allele.
 \end{verbatim}
 \normalsize
 
-If present, the number of entries must be twice the number of alt alleles.
+If present, the number of entries must be twice the number of ALT alleles.
 $CILEN$ consists of successive pairs of records indicating the lower and upper bounds of the $SVLEN$ confidence interval.
 
 \footnotesize
@@ -693,7 +693,7 @@ $CILEN$ consists of successive pairs of records indicating the lower and upper b
 \end{verbatim}
 \normalsize
 
-If present, the number of entries must be twice the number of alt alleles.
+If present, the number of entries must be twice the number of ALT alleles.
 $CICN$ consists of successive pairs of records indicating the lower and upper copy number bounds.
 
 \footnotesize
@@ -702,7 +702,7 @@ $CICN$ consists of successive pairs of records indicating the lower and upper co
 \end{verbatim}
 \normalsize
 
-If present, the number of entries must be twice the number of alt alleles.
+If present, the number of entries must be twice the number of ALT alleles.
 $CICNADJ$ consists of successive pairs of records indicating the lower and upper copy number bounds.
 
 \section{FORMAT keys used for structural variants}
